--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ isort = "^5.13.2"
 black = "^24.2.0"
 flake8 = "^7.0.0"
 sphinx = "^7.2.6"
+sphinx-rtd-theme = "^2.0.0"
 
 [tool.isort]
 profile = "black"
