--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
+pandas = "^2.2.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -15,6 +16,8 @@ black = "^24.2.0"
 flake8 = "^7.0.0"
 sphinx = "^7.2.6"
 sphinx-rtd-theme = "^2.0.0"
+pytest = "^8.0.2"
+ipykernel = "^6.29.3"
 
 [tool.isort]
 profile = "black"
