--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest = "^8.0.2"
 ipykernel = "^6.29.3"
 sphinx-autoapi = "^3.0.0"
 matplotlib = "^3.8.3"
+scikit-learn = "^1.4.1.post1"
 
 [tool.isort]
 profile = "black"
