--- a/.github/workflows/python-codecov.yml
+++ b/.github/workflows/python-codecov.yml
@@ -2,10 +2,9 @@ name: Python Codecov
 
 on:
   push:
-    branches:
-      - '*'
+    branches: [ '*' ]
   pull_request:
-    - '*'
+    branches: [ '*' ]
 
 jobs:
   build:
