--- a/.github/workflows/python-codecov.yml
+++ b/.github/workflows/python-codecov.yml
@@ -2,9 +2,11 @@ name: Python Codecov
 
 on:
   push:
-    branches: [ '*' ]
+    branches:
+      - '*'
   pull_request:
-    branches: [ '*' ]
+    branches:
+      - '*'
 
 jobs:
   build:
