--- a/.github/workflows/python-codecov.yml
+++ b/.github/workflows/python-codecov.yml
@@ -1,6 +1,6 @@
 name: Python Codecov
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -21,7 +21,7 @@ jobs:
         poetry install
 
     - name: Run pytest with coverage
-      run: poetry run pytest --cov=my_project tests/  # Replace my_project with your package name
+      run: poetry run pytest --cov=chronest tests/  # Replace my_project with your package name
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
